# Django-ORM-CBV-Learn

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
app/: asgi.py  settings.py  urls.py  wsgi.py
src/core/templates/: base.html  navbar_after_login.html  navbar_before_login.html
src/core/views/: index.py
src/home/: urls.py
src/home/templates/: about.html  index.html
src/home/views/: index.py
src/schools/: apps.py  urls.py
src/schools/admin/: admin.py
src/schools/migrations/: 0001_initial.py  0002_alter_schools_id.py  0003_schooltenant_rename_schools_school.py
src/schools/models/: __init__.py  graduation.py  school.py  school_tenant.py  schools.py
src/schools/templates/: details.html  list.html
src/schools/views/: create.py  details.py  list.py
src/user/: app.py  urls.py
src/user/admin/: admin.py
src/user/forms/: login.py  register.py  user.py
src/user/migrations/: 0001_initial.py  0002_customuser_name.py  0002_delete_userdata.py  0003_alter_customuser_name_alter_customuser_role.py  0003_initial.py  0004_alter_customuser_role.py  0005_remove_customuser_name.py  0006_default_role_inserts.py
src/user/models/: __init__.py  custom_user.py  role.py  student.py  teacher.py  teaching_areas.py
src/user/templates/: login.html  register.html
src/user/views/: __init__.py  login.py  register.py
templates/user/: base.html  index.html  login.html  registration.html
